--- a/Style/forms.css
+++ b/Style/forms.css
@@ -92,6 +92,19 @@ body header {
   transform: scale(1.1);
 }
 
+.header-user-info {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.header-user-info .user-name {
+  margin-right: 20px;
+}
+
+.user-name {
+  font-size: 19px;
+}
+
 .select {
   width: 200px;
   height: 40px;
@@ -227,7 +240,6 @@ body header {
 
 /*----------КНОПОЧКИ---------*/
 .button {
-  display: inline-block;
   padding: 8px;
   border-radius: 5px;
   border: 0;
@@ -244,13 +256,16 @@ body header {
   outline: none;
 }
 
-.button-login {
+.button-login,
+.button-logout {
+  width: 165px;
   background-color: transparent;
   color: #adbac7;
   border: 2px solid #adbac7;
   cursor: pointer;
 }
-.button-login:hover {
+.button-login:hover,
+.button-logout:hover {
   border: 1px solid #FBC832;
   box-shadow: 0px 2px 8px #FBC832;
   /*макет*/
@@ -469,6 +484,15 @@ label {
   color: red;
   display: block;
   font-size: 12px;
+}
+
+a.disabled {
+  pointer-events: none;
+  /* делаем элемент неактивным для взаимодействия */
+  cursor: default;
+  /*  курсор в виде стрелки */
+  color: #888;
+  /* цвет текста серый */
 }
 
 @media screen and (max-width: 360px) {
