--- a/Style/globalStyle.scss
+++ b/Style/globalStyle.scss
@@ -54,6 +54,17 @@ body {
     transform: scale(1.1);
   }
 }
+.header-user-info {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	& .user-name {
+		margin-right: 20px;
+	}
+}
+.user-name {
+	font-size: 19px;
+}
 .select {
   width: 200px;
   height: 40px;
@@ -180,25 +191,24 @@ body {
 }
 /*----------КНОПОЧКИ---------*/
 .button {
-	display: inline-block;
+	// display: inline-block;
 	padding: 8px;
 	border-radius: 5px;
 	border: 0; /*сбрасываем контур (для тега button)*/
 	max-width: 175px;
-	// height: 40;
 	overflow: hidden; 
 	text-align: center;
 	font-family: 'Roboto', Arial, sans-serif;
 	font-weight: 500;
 	font-size: 16px;
 	color: $darkColor;
-	// cursor: pointer;
-
 	&:focus {
 		outline: none;
 	}
 }
-.button-login {
+.button-login,
+.button-logout {
+	width: 165px;
   background-color: transparent;
   color: $lightColor;
   border: 2px solid $lightColor;
@@ -208,7 +218,6 @@ body {
 		box-shadow: 0px 2px 8px $yellowColor; /*макет*/
 	}
 }
-
 
 @media screen and (max-width: 768px){
 	.header, .main {
