--- a/Style/forms.css
+++ b/Style/forms.css
@@ -58,6 +58,12 @@ a {
   display: none;
 }
 
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
@@ -73,6 +79,20 @@ body header {
   margin-bottom: 15px;
 }
 
+body.autorized .header-user-info-wrapper {
+  display: block;
+}
+body.autorized .button-login {
+  display: none;
+}
+body.admin .button-add-film, body.admin .button-edit-film {
+  display: inline-block;
+}
+body.admin .button-remove-film {
+  display: flex;
+}
+
+/* ---------------------HEADER / MAIN ----------------------- */
 .header, .main {
   max-width: 90%;
   margin: 0 auto;
@@ -85,11 +105,15 @@ body header {
   align-items: center;
 }
 
-.header-img {
+.header__home-link-img {
   fill: #adbac7;
 }
-.header-img:hover {
-  transform: scale(1.1);
+.header__home-link-img:hover {
+  transform: scale(1.05);
+}
+
+.header-user-info-wrapper {
+  display: none;
 }
 
 .header-user-info {
@@ -105,140 +129,7 @@ body header {
   font-size: 19px;
 }
 
-.select {
-  width: 200px;
-  height: 40px;
-  color: #adbac7;
-  font-size: 16px;
-  background-color: #2d333b;
-  background-repeat: no-repeat;
-  border: 2px solid #adbac7;
-  border-radius: 5px;
-  padding: 8px;
-  cursor: pointer;
-  outline: none;
-  box-sizing: border-box;
-}
-.select:hover {
-  border: 1px solid #FBC832;
-  box-shadow: 0px 2px 8px #FBC832;
-  /*макет*/
-}
-
-.main .select {
-  margin-bottom: 40px;
-}
-.main .film-galary__wrapper {
-  margin-bottom: 40px;
-}
-
-.film-galary__wrapper {
-  max-width: 100%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  align-content: flex-start;
-  justify-content: center;
-  justify-items: center;
-  grid-row-gap: 30px;
-  grid-column-gap: 50px;
-}
-
-.film-item {
-  display: grid;
-  align-content: flex-end;
-  align-items: center;
-  justify-content: center;
-  justify-items: center;
-}
-.film-item .film-title {
-  margin-bottom: 10px;
-}
-
-.film-item-link {
-  position: relative;
-  display: block;
-}
-.film-item-link:hover .by-hover {
-  box-shadow: 0px 2px 8px #FBC832;
-  /*макет*/
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.film-title {
-  font-weight: 700;
-  font-size: 20px;
-  text-align: center;
-}
-
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.film-item-img {
-  overflow: hidden;
-  /*Контет обрезается, без предоставления прокрутки.*/
-  display: block;
-  object-fit: cover;
-  width: 200px;
-  height: 300px;
-  border-radius: 5px;
-  box-shadow: 0px 4px 8px black;
-  /*макет*/
-}
-.film-item-img:hover {
-  box-shadow: 0px 2px 8px #FBC832;
-  /*макет*/
-}
-
-.by-hover {
-  color: black;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: auto;
-  padding: 15px 5px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: transform 0.3s linear;
-  background-color: #adbac7;
-}
-
-/*______________________Пагинация____________________________*/
-.pagination {
-  display: flex;
-  justify-content: center;
-  max-width: 100%;
-}
-.pagination .pagination-item {
-  color: #adbac7;
-  padding: 8px 16px;
-  text-decoration: none;
-  border: 1px solid #ddd;
-  margin: 0 4px;
-}
-.pagination .pagination-item.active {
-  background-color: #FBC832;
-  color: #2d333b;
-  border: 1px solid #FBC832;
-}
-.pagination .pagination-item:hover:not(.active) {
-  background-color: #ddd;
-}
-.pagination .pagination-item:first-child {
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-.pagination .pagination-item:last-child {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-
-/*----------КНОПОЧКИ---------*/
+/*--------------------------КНОПОЧКИ------------------------------*/
 .button {
   padding: 8px;
   border-radius: 5px;
@@ -266,9 +157,56 @@ body header {
 }
 .button-login:hover,
 .button-logout:hover {
-  border: 1px solid #FBC832;
-  box-shadow: 0px 2px 8px #FBC832;
-  /*макет*/
+  transform: scale(1.1);
+}
+
+.button-login {
+  display: block;
+}
+
+.button-add-film,
+.button-remove-film,
+.button-edit-film {
+  display: none;
+}
+
+.button-add-film__img,
+.button-remove-film,
+.button-edit-film {
+  fill: #adbac7;
+  margin-right: 10px;
+}
+.button-add-film__img:hover,
+.button-remove-film:hover,
+.button-edit-film:hover {
+  transform: scale(1.1);
+}
+
+.button-remove-film {
+  width: 35px;
+  height: 35px;
+  margin: 0;
+  padding: 0;
+  background-color: #2d333b;
+  cursor: pointer;
+}
+
+.select {
+  width: 200px;
+  height: 40px;
+  color: #adbac7;
+  font-size: 16px;
+  background-color: #2d333b;
+  background-repeat: no-repeat;
+  border: 2px solid #adbac7;
+  border-radius: 5px;
+  padding: 8px;
+  cursor: pointer;
+  outline: none;
+  box-sizing: border-box;
+}
+.select:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 768px) {
@@ -280,50 +218,8 @@ body header {
     height: 70px;
   }
 
-  .main .select {
-    margin-bottom: 20px;
-  }
-  .main .film-galary__wrapper {
-    margin-bottom: 20px;
-  }
-
-  .film-galary__wrapper {
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-row-gap: 25px;
-    grid-column-gap: 25px;
-  }
-
   .button {
     font-size: 16px;
-  }
-
-  .film-item-img {
-    width: 160px;
-    height: 240px;
-  }
-
-  .film-title {
-    font-weight: 500;
-    font-size: 16px;
-  }
-
-  .pagination .pagination-item {
-    padding: 6px 12px;
-    margin: 0 3px;
-  }
-}
-@media screen and (max-width: 550px) {
-  .pagination .pagination-item {
-    padding: 4px 6px;
-    margin: 0 2px;
-    font-weight: 400;
-  }
-}
-@media screen and (max-width: 360px) {
-  .pagination .pagination-item {
-    padding: 2px 4px;
-    margin: 0 1px;
-    font-size: 14px;
   }
 }
 .form__container {
